--- a/css/main2.css
+++ b/css/main2.css
@@ -125,12 +125,19 @@ article a {
   border-radius: 50px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
 }
-article > .profile_box > p{
+article > .profile_box > p:nth-of-type(1){
   color: #333333;
   font-size: 1.2vw;
   font-weight: 700;
   text-align: center;
-  margin-top: 7vw;
+  margin-top: 6.5vw;
+}
+article > .profile_box > p:nth-of-type(2){
+  color: #555;
+  font-size: 1vw;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 0.2vw;
 }
 
 article:nth-of-type(1) > .profile_box{
