--- a/css/main2.css
+++ b/css/main2.css
@@ -97,6 +97,9 @@ article:nth-of-type(3) > a > .p_box:hover{
   border: 3px solid #A1A1A1;
   z-index: 999;
 }
+article:nth-of-type(3) > .profile_box > p:nth-of-type(1){
+  font-size: 1.15vw;
+}
 
 article:nth-of-type(4) > a > .p_box {
   position: absolute;
