--- a/css/main2.css
+++ b/css/main2.css
@@ -133,7 +133,7 @@ article > .profile_box > p:nth-of-type(1){
   font-size: 1.2vw;
   font-weight: 700;
   text-align: center;
-  margin-top: 6vw;
+  margin-top: 5.7vw;
 }
 article > .profile_box > p:nth-of-type(2){
   color: #555;
@@ -143,6 +143,13 @@ article > .profile_box > p:nth-of-type(2){
   margin-top: 0.2vw;
 }
 
+article > .profile_box > p:nth-of-type(3){
+  color: #999;
+  font-size: 0.9vw;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 0.5vw;
+}
 article:nth-of-type(1) > .profile_box{
   position: absolute;
   border: 2px dashed #003F70;
